# lifeDb

./: .gitignore  CMakeLists.txt  build_log.txt  gerr.txt  ninja_full.txt  readme.md  t.txt  test.cat  test_m5.sql  test_out.txt
data/: catalog.cat  emp.db  emp.idx  t.db  t.idx  test.db  test.idx  users.db  users.idx
src/: main.cpp
src/engine/: btree.cpp  btree.h  catalog.cpp  catalog.h  executor.cpp  executor.h  pager.cpp  pager.h  row_codec.cpp  row_codec.h  wal.cpp  wal.h
src/sql/: ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h
